GNOME Bugzilla – Bug 751664
gstjniutils.c - JNI method IDs not set for android platform causing app to crash during runtime.
Last modified: 2015-08-16 13:40:24 UTC
initialize_classes not invoked from gst_amc_jni_initialize_java_vm. reason: if (java_vm) { GST_DEBUG ("Java VM already provided by the application"); return TRUE; } the following fix works fine: if (java_vm) { GST_DEBUG ("Java VM already provided by the application"); return initialize_classes (); }
Thanks! commit d5a676aec8cd95f76888ae253b0a9976816a41b6 Author: Sebastian Dröge <sebastian@centricular.com> Date: Mon Jun 29 18:50:09 2015 +0200 androidmedia: Call initialize_classes() also when we got the Java VM from the app https://bugzilla.gnome.org/show_bug.cgi?id=751664
*** Bug 752324 has been marked as a duplicate of this bug. ***