androidmedia: Call initialize_classes() also when we got the Java VM from the app

https://bugzilla.gnome.org/show_bug.cgi?id=751664